--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,7 @@ default_envs =
 ;                tasmota-IT
 ;                tasmota-KO
 ;                tasmota-NL
-;                tasmota-PL
+                tasmota-PL
 ;                tasmota-PT
 ;                tasmota-RO
 ;                tasmota-RU
